# information

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  justfile
.cargo/: config.toml
crates/excavate/: Cargo.toml
crates/excavate/examples/: official.rs
crates/excavate/src/: lib.rs  practice.rs  spider.md
crates/excavate/src/practice/: crawl_x.rs  official.rs  official_1.rs  official_headless.rs  spider1.rs  spider_chrome_direct.rs
crates/excavate/src/practice/crawl_x/: check.sql  crawl_1.rs  to_db.rs
crates/utils/: Cargo.toml
crates/utils/src/: utils.rs
crates/utils/src/tools/: log.rs
