[package]
name = "excavate"
publish = ["tuna"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }


chromiumoxide = { version = "0.8.0" }
# very bad, it can not compile
#headless_chrome = { version = "1.0.20" }
