[package]
name = "excavate"
publish = ["tuna"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
utils.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true
log.workspace = true
env_logger.workspace = true
spider.workspace = true
sea-orm.workspace = true
scraper.workspace = true
dotenvy.workspace = true
rand.workspace = true
chromiumoxide.workspace = true

[dev-dependencies]
sea-orm-migration.workspace = true
